@@ -15,6 +15,8 @@ ImportedBookmarksPreviewDialog::ImportedBookmarksPreviewDialog(
     ui->leTagsForFolder->setModel(&dbm->tags.model);
     ui->leTagsForFolder->setModelColumn(dbm->tags.tidx.TagName);
 
+    AddItems();
+
     canShowTheDialog = true;
 }
 
@@ -31,4 +33,32 @@ bool ImportedBookmarksPreviewDialog::canShow()
 void ImportedBookmarksPreviewDialog::accept()
 {
     QDialog::accept();
+}
+
+void ImportedBookmarksPreviewDialog::AddItems()
+{
+    foreach (const ImportedBookmarkFolder& ibf, elist->ibflist)
+    {
+        QTreeWidgetItem* twi = new QTreeWidgetItem();
+        twi->setText(0, ibf.title);
+        folderItems[ibf.intId] = twi;
+
+        if (ibf.parentId <= 0)
+            ui->twBookmarks->addTopLevelItem(twi);
+        else
+            folderItems[ibf.parentId]->addChild(twi);
+    }
+
+    foreach (const ImportedBookmark& ib, elist->iblist)
+    {
+        QTreeWidgetItem* twi = new QTreeWidgetItem();
+        twi->setText(0, ib.title);
+
+        if (ib.parentId <= 0)
+            ui->twBookmarks->addTopLevelItem(twi);
+        else
+            folderItems[ib.parentId]->addChild(twi);
+    }
+
+    ui->twBookmarks->expandAll();
 }
